--- a/package.json
+++ b/package.json
@@ -14,26 +14,30 @@
     "@fortawesome/pro-light-svg-icons": "^5.5.0",
     "@fortawesome/pro-regular-svg-icons": "^5.5.0",
     "@fortawesome/pro-solid-svg-icons": "^5.5.0",
-    "@fortawesome/vue-fontawesome": "^0.1.4",
-    "@sentry/browser": "^4.5.0",
+    "@fortawesome/vue-fontawesome": "^0.1.5",
+    "@sentry/browser": "^4.5.3",
     "ace-builds": "^1.4.2",
     "axios": "^0.18.0",
     "caller-path": "^2.0.0",
     "get-caller-file": "^2.0.1",
     "js-beautify": "^1.8.9",
     "js-cookie": "^2.2.0",
-    "moment": "^2.22.2",
+    "moment": "^2.24.0",
     "mqtt": "^2.18.8",
     "register-service-worker": "^1.5.2",
+    "semver": "^5.6.0",
     "skeleton-scss": "^2.0.4",
     "spectre.css": "^0.5.8",
     "stylis": "^3.5.3",
+    "ua-parser-js": "^0.7.19",
     "v-runtime-template": "^1.5.2",
     "vue": "^2.5.22",
+    "vue-meta": "^1.5.8",
     "vue-motion": "^0.2.3",
     "vue-router": "^3.0.1",
     "vue2-editor": "^2.6.6",
-    "vuex": "^3.0.1"
+    "vuex": "^3.1.0",
+    "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.3.0",
@@ -42,13 +46,13 @@
     "@vue/cli-plugin-multi-app": "file:plugins/multi-app",
     "@vue/cli-plugin-pwa": "^3.3.0",
     "@vue/cli-plugin-unit-mocha": "^3.3.0",
-    "@vue/cli-service": "^3.3.0",
+    "@vue/cli-service": "^3.3.1",
     "@vue/eslint-config-airbnb": "^4.0.0",
     "@vue/test-utils": "^1.0.0-beta.28",
     "babel-eslint": "^10.0.1",
     "chai": "^4.1.2",
-    "dependency-cruiser": "^4.11.0",
-    "eslint": "^5.12.0",
+    "dependency-cruiser": "^4.12.0",
+    "eslint": "^5.12.1",
     "eslint-plugin-vue": "^5.1.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
